Implement the second version of drill down filter panel form with collapse sections

--- a/client/web/src/enterprise/insights/components/insights-view-grid/components/backend-insight/components/drill-down-filters-panel/drill-down-input/DrillDownInput.module.scss
+++ b/client/web/src/enterprise/insights/components/insights-view-grid/components/backend-insight/components/drill-down-filters-panel/drill-down-input/DrillDownInput.module.scss
@@ -11,6 +11,10 @@
     font-weight: normal;
 }
 
+.input-container {
+    flex: 1;
+}
+
 .input {
     font-size: inherit;
     border-top-left-radius: 0;
@@ -26,6 +30,7 @@
     display: flex;
     align-items: center;
     margin-bottom: 0.5rem;
+    font-size: 0.75rem;
 }
 
 .label-reset-button {
