--- a/client/web/src/enterprise/insights/components/insights-view-grid/components/backend-insight/components/drill-down-filters-panel/DrillDownInsightFilters.module.scss
+++ b/client/web/src/enterprise/insights/components/insights-view-grid/components/backend-insight/components/drill-down-filters-panel/DrillDownInsightFilters.module.scss
@@ -43,7 +43,8 @@
     align-items: center;
     gap: 1rem;
 
-    padding: 0.75rem;
+    margin-top: -0.25rem;
+    padding: 0.75rem 1rem;
 }
 
 .buttons {
