--- a/client/web/src/enterprise/insights/components/insights-view-grid/components/backend-insight/components/drill-down-filters-panel/drill-down-input/DrillDownInput.module.scss
+++ b/client/web/src/enterprise/insights/components/insights-view-grid/components/backend-insight/components/drill-down-filters-panel/drill-down-input/DrillDownInput.module.scss
@@ -9,6 +9,7 @@
     display: flex;
     align-items: center;
     font-weight: normal;
+    font-family: var(--monospace-font-family);
 }
 
 .input-container {
@@ -34,6 +35,7 @@
 }
 
 .label-reset-button {
+    font-size: 0.75rem;
     margin-left: auto;
     padding: 0;
     font-weight: normal;
