--- a/client/web/src/enterprise/insights/components/insights-view-grid/components/backend-insight/components/drill-down-filters-panel/filter-collapse-section/FilterCollapseSection.module.scss
+++ b/client/web/src/enterprise/insights/components/insights-view-grid/components/backend-insight/components/drill-down-filters-panel/filter-collapse-section/FilterCollapseSection.module.scss
@@ -36,4 +36,6 @@
     background-color: var(--subtle-bg);
     padding: 0 0.25rem;
     font-weight: 400;
+    font-size: 0.75rem;
+    font-family: var(--monospace-font-family);
 }
