--- a/client/jetbrains/webview/src/search/results/FileSearchResult.module.scss
+++ b/client/jetbrains/webview/src/search/results/FileSearchResult.module.scss
@@ -10,7 +10,32 @@
 }
 
 .header {
-    background-color: lightgray;
-    color: black;
-    pointer-events: none;
+    padding: 0.5rem 0.5rem 0.5rem 0;
+    background-color: transparent;
+    display: flex;
+    align-items: center;
+    white-space: nowrap;
+
+    &-title {
+        flex: 1 1 auto;
+        overflow: hidden;
+        display: flex;
+    }
+
+    &-divider {
+        border-right: 1px solid var(--border-color-2);
+        height: 1rem;
+    }
+
+    p {
+        margin-bottom: 0;
+    }
+
+    &:not(:only-of-type) {
+        border-bottom: none;
+    }
+
+    &-description {
+        line-height: (14/11);
+    }
 }
