--- a/client/jetbrains/webview/src/search/App.module.scss
+++ b/client/jetbrains/webview/src/search/App.module.scss
@@ -6,7 +6,7 @@
     overflow: hidden;
     display: flex;
     flex-direction: column;
-    color: white;
+    color: var(--body-color);
 }
 
 .search-box-container {
