--- a/client/web/src/marketing/SurveyUseCaseForm.module.scss
+++ b/client/web/src/marketing/SurveyUseCaseForm.module.scss
@@ -1,27 +1,19 @@
-.toast {
-    > div {
-        &:first-child {
-            padding-right: 0.688rem;
-        }
-    }
+.toast-body {
+    padding-right: 0.688rem;
 }
 
-.textarea {
-    > div {
-        font-size: 0.75rem;
-    }
+.textarea-label {
+    font-size: 0.75rem;
 }
 
 .check-wrap {
     display: flex;
     flex-wrap: wrap;
-    gap: 0.5rem;
+    gap: 0.375rem;
+}
 
-    label {
-        font-size: 0.75rem;
-        line-height: 136%;
-        letter-spacing: -0.25px;
-    }
+.checkbox-label {
+    line-height: 136%;
 }
 
 .toast-subtitle {
